# Open-Switch

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  database.rs  error.rs  lib.rs  main.rs  prompt_service.rs
src/i18n/: index.ts
src/i18n/locales/: en.json  ja.json  zh.json
src/lib/: api.ts
src/types/: index.ts
