[package]
name = "open-switch"
version = "1.0.0"
description = "Configuration Manager for OpenCode"
authors = [""]
license = "MIT"
edition = "2021"
rust-version = "1.85.0"

[lib]
name = "open_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
dirs = "5.0"
thiserror = "2.0"
anyhow = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
indexmap = { version = "2.7", features = ["serde"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
panic = "unwind"
strip = "symbols"
